--- a/SummonAndroid/app/src/main/res/values/strings.xml
+++ b/SummonAndroid/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_zxing_splash">ZXIngSplash</string>
-    <string name="title_activity_customer_order">CustomerOrderActivit</string>
+    <string name="title_activity_customer_order">CustomerOrderActivity</string>
+    <string name="title">Genie</string>
 </resources>
